Desafío Complementario Bootstrap

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -31,71 +31,79 @@
           </nav>
     </header>
     <main>
-        <section class="mainSection">
-            <h2 class="blogTitle">Blog</h2>
-        </section>
-        <section class="mainSection blogEntries">
-           <div class="container">
-               <img class="container__img blog__img" src="../images/blogImg1.png" alt="Fotografía de la entrada al Blog">
-               <h3 class="blogEntrada">Entrada de Blog</h3>
-               <div class="blogDatos">
-                <p class="blogAutora"><i>Autora</i></p>
-                <p class="blogFecha"><i>Fecha</i></p>
-               </div>
-               <p class="blogPreview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
-           </div>
-           <div class="container reverse">
-                <img class="container__img blog__img" src="../images/blogEntryImg.png" alt="Fotografía de la entrada al Blog">
-                <h3 class="blogEntrada">Entrada de Blog</h3>
-                <div class="blogDatos">
-                    <p class="blogAutora"><i>Autora</i></p>
-                    <p class="blogFecha"><i>Fecha</i></p>
+        <section>
+            <h2 class="fw-bold text-white">Blog</h2>
+            <div class="grid-layout mb-3">
+                <img class="grid-layout__img blog__img hover" src="../images/blogImg1.png" alt="Fotografía de la entrada al Blog">
+                <h3 class="hover grid-center m-3">Entrada de Blog</h3>
+                <div>
+                    <p class="m-0 fst-italic">Autora</p>
+                    <p class="m-0 fst-italic">Fecha</p>
                 </div>
-                <p class="blogPreview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
-            </div> 
-        </section>
-        <section class="mainSection" id="momTales">
-            <img class="momTales__img"src="../images/momTalesBlog.PNG" alt="Banner de Mom Tales">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro, provident dolore pariatur, nobis architecto aliquid nesciunt labore eveniet, eaque deserunt eius illo! Labore nihil deserunt assumenda, temporibus debitis necessitatibus rerum.</p>
-            <div class="container">
-                <img class="container__img blog__img" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
-                <h3 class="blogEntrada">Entrada de Blog</h3>
-                <div class="blogDatos">
-                    <p class="blogAutora"><i>Autora</i></p>
-                    <p class="blogFecha"><i>Fecha</i></p>
-                </div>
-                <p class="blogPreview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
             </div>
-            <div class="container reverse">
-                <img class="container__img blog__img" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
-                <h3 class="blogEntrada">Entrada de Blog</h3>
-                <div class="blogDatos">
-                    <p class="blogAutora"><i>Autora</i></p>
-                    <p class="blogFecha"><i>Fecha</i></p>
+            <div class="grid-layout reverse mb-5">
+                 <img class="grid-layout__img blog__img hover" src="../images/blogEntryImg.png" alt="Fotografía de la entrada al Blog">
+                 <h3 class="hover grid-center m-3">Entrada de Blog</h3>
+                 <div>
+                    <p class="m-0 fst-italic">Autora</p>
+                    <p class="m-0 fst-italic">Fecha</p>
+                 </div>
+                 <p class="blogPreview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
+             </div> 
+         </section>
+        
+        <div class="container-fluid">
+            <div class="row">
+                <div class="bg-momTales"></div>
+                <div class="col-12 mb-4">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro, provident dolore pariatur, nobis architecto aliquid nesciunt labore eveniet, eaque deserunt eius illo! Labore nihil deserunt assumenda, temporibus debitis necessitatibus rerum.</p>
                 </div>
-                <p class="blogPreview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
-                </div>
-            <div class="container">
-                <img class="container__img blog__img" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
-                <h3 class="blogEntrada">Entrada de Blog</h3>
-                <div class="blogDatos">
-                    <p class="blogAutora"><i>Autora</i></p>
-                    <p class="blogFecha"><i>Fecha</i></p>
-                </div>
-                <p class="blogPreview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
-        </section>
+            </div>
+        </div>
+        <div class="grid-layout mb-3">
+            <img class="grid-layout__img blog__img hover" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
+            <h3 class="hover grid-center m-3">Entrada de Blog</h3>
+            <div>
+                <p class="m-0 fst-italic">Autora</p>
+                <p class="m-0 fst-italic">Fecha</p>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
+        </div>
+        <div class="grid-layout reverse mb-3">
+             <img class="grid-layout__img blog__img hover" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
+             <h3 class="hover grid-center m-3">Entrada de Blog</h3>
+             <div>
+                <p class="m-0 fst-italic">Autora</p>
+                <p class="m-0 fst-italic">Fecha</p>
+             </div>
+             <p class="blogPreview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
+         </div> 
+         <div class="grid-layout mb-5">
+            <img class="grid-layout__img blog__img hover" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
+            <h3 class="hover grid-center m-3">Entrada de Blog</h3>
+            <div>
+                <p class="m-0 fst-italic">Autora</p>
+                <p class="m-0 fst-italic">Fecha</p>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
+        </div>
     </main>
-    
     <footer>
-        <div class="social">
-            <a href="https://www.instagram.com/yougotthis_mom/" target="_blank"><img class="socialLogos" src="../images/instagramLogo.png" alt="instagramSVG"></a>
-            <span>@yougotthis_mom</span>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-12 p-0 mt-4">
+                    <a href="https://www.instagram.com/yougotthis_mom/" target="_blank"><img class="img-social" src="../images/instagramLogo.png" alt="instagramSVG"> <span class="social-text">@yougotthis_mom</span></a>
+                </div>
+                <div class="col-md-4 offset-md-4 mt-4">
+                    <img src="../images/firma.png" alt="Firma 'Con cariño, Lily'">
+                </div>
+                <div class="col-md-12 p-0 m-0">
+                    <p class="derechos mt-0 mb-3">© 2021 YOU GOT THIS MOM. Todos los Derechos Reservados</p>
+                </div>
+            </div>
         </div>
-        <div class="firma">
-            <img src="../images/firma.png" alt="Firma 'Con cariño, Lily'">
-        </div>
-        <p class="derechos">© 2021 YOU GOT THIS MOM. Todos los Derechos Reservados</p>
     </footer>
-
+    <script src="../js/bootstrap.js"></script>
 </body>
 </html>
