--- a/pages/productos.html
+++ b/pages/productos.html
@@ -31,82 +31,73 @@
           </nav>
     </header>
     <main>
-        <section class="mainSection">
-            <h2 class="productosTitle">Productos</h2>
-        </section>
-        <section class="mainSection productGrid">
-            <div class="producto">
-                <img class="container__img product__img" src="../images/productosHoodie.jpg" alt="Imagen Hoodie">
-                <div class="productData">
-                    <h4>You Got This Mom - Hoodie</h4>
-                    <h5>$500.00</h5>
-                    <div class="btn-products">
-                        <a class="btn-anchor" href="#">Ver Producto</a>
-                    </div>
+        <h2 class="mb-4">Productos</h2>
+        <section class="grid-cards mb-5">
+            <div class="card hover-alt shadow-lg" style="width: 18rem;">
+                <img class="card-img-top max cover" src="../images/productosHoodie.jpg" alt="Hoodie You Got This Mom">
+                <div class="card-body">
+                <h5 class="card-title">You Got This Mom - Hoodie Negra</h5>
+                <p class="card-text">$500.00</p>
+                <a href="#" class="btn btn-secondary">Ver más</a>
                 </div>
             </div>
-            <div class="producto">
-                <img class="container__img product__img" src="../images/productosTarro.JPG" alt="Imagen Tarro"> <!--Pedir imagen original para ratio de tamaño -->
-                <div class="productData">
-                    <h4>You Got This Mom - Tarro</h4>
-                    <h5>$350.00</h5>
-                    <div class="btn-products">
-                        <a class="btn-anchor" href="#">Ver Producto</a>
-                    </div>
+            <div class="card hover-alt shadow-lg" style="width: 18rem;">
+                <img class="card-img-top max cover" src="../images/productosTarro3.jpeg" alt="Hoodie You Got This Mom">
+                <div class="card-body">
+                <h5 class="card-title">It's a Good Day to have a Good Day - Taza</h5>
+                <p class="card-text">$350.00</p>
+                <a href="#" class="btn btn-secondary">Ver más</a>
                 </div>
             </div>
-            <div class="producto">
-                <img class="container__img product__img" src="../images/productosMotherhood.png" alt="Imagen T-Shirt Motherhood is powerful">
-                <div class="productData">
-                    <h4>Motherhood is Powerful - T-Shirt</h4>
-                    <h5>$300.00</h5>
-                    <div class="btn-products">
-                        <a class="btn-anchor" href="#">Ver Producto</a>
-                    </div>
+            <div class="card hover-alt shadow-lg" style="width: 18rem;">
+                <img class="card-img-top max cover" src="../images/productosMotherhood.png" alt="Hoodie You Got This Mom">
+                <div class="card-body">
+                <h5 class="card-title">Motherhood is Powerful - T-shirt</h5>
+                <p class="card-text">$300.00</p>
+                <a href="#" class="btn btn-secondary">Ver más</a>
                 </div>
             </div>
-            <div class="producto">
-                <img class="container__img product__img" src="../images/productosYouGotThisMom.png" alt="Imagen T-Shirt You Got This Mom">
-                <div class="productData">
-                    <h4>You Got This Mom - T-Shirt</h4>
-                    <h5>$300.00</h5>
-                    <div class="btn-products">
-                        <a class="btn-anchor" href="#">Ver Producto</a>
-                    </div>
+            <div class="card hover-alt shadow-lg" style="width: 18rem;">
+                <img class="card-img-top max cover" src="../images/productosYouGotThisMom.png" alt="Hoodie You Got This Mom">
+                <div class="card-body">
+                <h5 class="card-title">You Got This Mom - T-shirt</h5>
+                <p class="card-text">$300.00</p>
+                <a href="#" class="btn btn-secondary">Ver más</a>
                 </div>
             </div>
-            <div class="producto">
-                <img class="container__img product__img" src="../images/productosTazaYouGotThisMom.png" alt="Imagen Taza You Got This Mom">
-                <div class="productData">
-                    <h4>You Got This Mom - Taza</h4>
-                    <h5>$400.00</h5>
-                    <div class="btn-products">
-                        <a class="btn-anchor" href="#">Ver Producto</a>
-                    </div>
+            <div class="card hover-alt shadow-lg" style="width: 18rem;">
+                <img class="card-img-top max cover" src="../images/productosTazaYouGotThisMom.png" alt="Hoodie You Got This Mom">
+                <div class="card-body">
+                <h5 class="card-title">You Got This Mom - Taza</h5>
+                <p class="card-text">$400.00</p>
+                <a href="#" class="btn btn-secondary">Ver más</a>
                 </div>
             </div>
-            <div class="producto">
-                <img class="container__img product__img" src="../images/productosTazaYouGotThisDad.png" alt="Imagen Taza You Got This Dad">
-                <div class="productData">
-                    <h4>You Got This Dad - Taza</h4>
-                    <h5>$400.00</h5>
-                    <div class="btn-products">
-                        <a class="btn-anchor" href="#">Ver Producto</a>
-                    </div>
+            <div class="card hover-alt shadow-lg" style="width: 18rem;">
+                <img class="card-img-top max cover" src="../images/productosTazaYouGotThisDad.png" alt="Hoodie You Got This Mom">
+                <div class="card-body">
+                <h5 class="card-title">You Got This Dad - Taza</h5>
+                <p class="card-text">$400.00</p>
+                <a href="#" class="btn btn-secondary">Ver más</a>
                 </div>
             </div>
         </section>
     </main>
-   
     <footer>
-        <div class="social">
-            <a href="https://www.instagram.com/yougotthis_mom/" target="_blank"><img class="socialLogos" src="../images/instagramLogo.png" alt="instagramSVG"></a>
-            <span>@yougotthis_mom</span>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-12 p-0 mt-4">
+                    <a href="https://www.instagram.com/yougotthis_mom/" target="_blank"><img class="img-social" src="../images/instagramLogo.png" alt="instagramSVG"> <span class="social-text">@yougotthis_mom</span></a>
+                </div>
+                <div class="col-md-4 offset-md-4 mt-4">
+                    <img src="../images/firma.png" alt="Firma 'Con cariño, Lily'">
+                </div>
+                <div class="col-md-12 p-0 m-0">
+                    <p class="derechos mt-0 mb-3">© 2021 YOU GOT THIS MOM. Todos los Derechos Reservados</p>
+                </div>
+            </div>
         </div>
-        <div class="firma">
-            <img src="../images/firma.png" alt="Firma 'Con cariño, Lily'">
-        </div>
-        <p class="derechos">© 2021 YOU GOT THIS MOM. Todos los Derechos Reservados</p>
     </footer>
+    <script src="../js/bootstrap.js"></script>
 </body>
 </html>
