--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
           </nav>
     </header>
-    <main>
+    <main class="top-0">
         <section>
             <div class="container-fluid">
                 <div class="row">
@@ -100,9 +100,9 @@
                             </div>
                           </div>
                           <div class="carousel-item">
-                            <img src="images/productosHoodie.jpg" class="d-block w-100 img-carrousel" alt="...">
+                            <img src="images/tazasRecent.jpeg" class="d-block w-100 img-carrousel" alt="...">
                             <div class="carousel-caption d-none d-md-block">
-                              <h5>¡Nuevo Producto en tienda!</h5>
+                              <h5>¡Nuevos Productos en tienda!</h5>
                               <p>Con la temporada de invierno, ¿Por qué no comprar una hoodie?</p>
                             </div>
                           </div>
