--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -30,7 +30,7 @@
             </div>
           </nav>
     </header>
-    <main>
+    <main class="top-0">
         <div class="d-flex flex-column flex-lg-row align-content-center justify-content-center pt-5">
             <img class="flex-grow-0 cover align-self-center img-size" src="../images/aboutImg.jpeg" alt="Imagen About Me">
             <div class="p-4 mt-5 align-self-center flex-grow-1">
