--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,31 +24,38 @@
                   <a class="nav-link" href="aboutMe.html">About Me</a>
                   <a class="nav-link" href="blog.html">Blog</a>
                   <a class="nav-link" href="productos.html">Productos</a>
-                  <a class="nav-link active" aria-current="page" href="../contacto.html">Contacto</a>
+                  <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
                 </div>
               </div>
             </div>
           </nav>
     </header>
     <main>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="bg-contacto"></div>
+            </div>
+        </div>
         <section class="mainSection">
-            <img class="hero" src="../images/contactoBanner.png" alt="Banner Contacto">
-        </section>
-        <section class="mainSection">
-            <div class="contactForm">
-                <div class="contactForm__wrapper">
-                    <h3 class="contactForm__title">Me encantaría saber de ti</h3>
-                    <p class="contactForm__text">¿Te gustaría escribir en mi blog? ¿Eres empresa y te gustaría colaborar? Escríbeme y pronto nos pondremos en contacto.</p>
+            <div class="d-flex flex-column flex-lg-row align-items-lg-center justify-content-center">
+                <div class="basis">
+                    <h3 class="mb-4">Me encantaría saber de ti</h3>
+                    <p class="m-0">¿Te gustaría escribir en mi blog? ¿Eres empresa y te gustaría colaborar? Escríbeme y pronto nos pondremos en contacto.</p>
                 </div>
-                <form action="" method="" enctype="text/plain">
-                    <fieldset class="gridForm">
-                        <input class="inputText" type="name" placeholder="Nombre" required>
-                        <input class="inputText" type="email" placeholder="Correo Electrónico" required>
-                            <textarea name="msj" class="inputMsj" cols="44" rows="10" placeholder="Mensaje" required></textarea>
-                        <div class="contactSubmit">
-                            <input class="btn" type="submit" value="Enviar">
-                        </div>
-                    </fieldset>
+                <form class="m-5 basis">
+                    <div class="form-group">
+                        <label for="name">Nombre</label>
+                        <input type="text" class="form-control" id="name" placeholder="Lily de You Got This Mom">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Correo Electrónico</label>
+                        <input type="email" class="form-control" id="email" placeholder="nombre@ejemplo.com">
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Mensaje</label>
+                        <textarea class="form-control" id="message" rows="5"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-light mt-3">Enviar</button>
                 </form>
             </div>
             
@@ -56,14 +63,20 @@
     </main>
     
     <footer>
-        <div class="social">
-            <a href="https://www.instagram.com/yougotthis_mom/" target="_blank"><img class="socialLogos" src="../images/instagramLogo.png" alt="instagramSVG"></a>
-            <span>@yougotthis_mom</span>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-12 p-0 mt-4">
+                    <a href="https://www.instagram.com/yougotthis_mom/" target="_blank"><img class="img-social" src="../images/instagramLogo.png" alt="instagramSVG"> <span class="social-text">@yougotthis_mom</span></a>
+                </div>
+                <div class="col-md-4 offset-md-4 mt-4">
+                    <img src="../images/firma.png" alt="Firma 'Con cariño, Lily'">
+                </div>
+                <div class="col-md-12 p-0 m-0">
+                    <p class="derechos mt-0 mb-3">© 2021 YOU GOT THIS MOM. Todos los Derechos Reservados</p>
+                </div>
+            </div>
         </div>
-        <div class="firma">
-            <img src="../images/firma.png" alt="Firma 'Con cariño, Lily'">
-        </div>
-        <p class="derechos">© 2021 YOU GOT THIS MOM. Todos los Derechos Reservados</p>
     </footer>
+    <script src="../js/bootstrap.js"></script>
 </body>
 </html>
