2a Entrega de Proyecto Final

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - YGTM</title>
+    <link rel="icon" type="image/x-icon" href="images/LogoYGTM.jpeg">
     <link rel="stylesheet" href="css/style.css"> 
 </head>
 <body>
@@ -34,16 +35,17 @@
         <section>
             <div class="container-fluid">
                 <div class="row">
-                    <img class="w-100 p-0" src="images/hero.jpg" alt="Imagen Principal">   
-                </div>
-            </div>
-            <div class="container mb-5">
-                <div class="row">
-                    <div class="col-12">
-                        <h2 class="text-uppercase mt-5">Un espacio para todas las mamás</h2>
-                        <p class="lead m-3">La maternidad es única. Cada quién vive una historia diferente, pero entre todas nos podemos entender, enriquecer y apoyar porque este... es un camino para toda la vida.
-                        </p>
-                    </div>
+                  <div class="col-12 p-0">
+                    <div class="bg-hero">
+                      <div class="no-content"></div>
+                    </div> 
+                  </div>
+                    <div class="col-12 bg-opacity-0">
+                      <div class="main-text">
+                        <h2 class="text-uppercase mt-5 fw-bold">Un espacio para todas las mamás</h2>
+                        <p class="lead m-3">La maternidad es única. Cada quién vive una historia diferente, pero entre todas nos podemos entender, enriquecer y apoyar porque este... es un camino para toda la vida.</p>
+                      </div>
+                    </div> 
                 </div>
             </div>
         </section>    
