--- a/pages/blog.html
+++ b/pages/blog.html
@@ -33,7 +33,7 @@
     <main>
         <section>
             <h2 class="fw-bold text-white">Blog</h2>
-            <div class="grid-layout mb-3">
+            <div class="grid-layout mb-3 mt-5">
                 <img class="grid-layout__img blog__img hover" src="../images/blogImg1.png" alt="Fotografía de la entrada al Blog">
                 <h3 class="hover grid-center m-3">Entrada de Blog</h3>
                 <div>
@@ -42,7 +42,7 @@
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
             </div>
-            <div class="grid-layout reverse mb-5">
+            <div class="grid-layout reverse mb-5 mt-5">
                  <img class="grid-layout__img blog__img hover" src="../images/blogEntryImg.png" alt="Fotografía de la entrada al Blog">
                  <h3 class="hover grid-center m-3">Entrada de Blog</h3>
                  <div>
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </div>
-        <div class="grid-layout mb-3">
+        <div class="grid-layout mb-3 mt-5">
             <img class="grid-layout__img blog__img hover" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
             <h3 class="hover grid-center m-3">Entrada de Blog</h3>
             <div>
@@ -70,7 +70,7 @@
             </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
         </div>
-        <div class="grid-layout reverse mb-3">
+        <div class="grid-layout reverse mb-3 mt-5">
              <img class="grid-layout__img blog__img hover" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
              <h3 class="hover grid-center m-3">Entrada de Blog</h3>
              <div>
@@ -79,7 +79,7 @@
              </div>
              <p class="blogPreview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
          </div> 
-         <div class="grid-layout mb-5">
+         <div class="grid-layout mb-5 mt-5">
             <img class="grid-layout__img blog__img hover" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
             <h3 class="hover grid-center m-3">Entrada de Blog</h3>
             <div>
