--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,7 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link" href="/index.html">Inicio</a>
+                  <a class="nav-link" href="../index.html">Inicio</a>
                   <a class="nav-link" href="aboutMe.html">About Me</a>
                   <a class="nav-link" href="blog.html">Blog</a>
                   <a class="nav-link" href="productos.html">Productos</a>
