Desafio SASS: Index con SCSS

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - YGTM</title>
     <link rel="icon" type="image/x-icon" href="images/LogoYGTM.jpeg">
-    <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="css/compilado.css"> 
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
-            <div class="container-fluid">
+            <div class="container-fluid m-auto p-0">
               <a class="navbar-brand" href="index.html">
                   <img src="images/LogoYGTM.jpeg" alt="You Got This Mom" width="50" height="50" class="d-inline-block align-text-top"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,21 +35,19 @@
         <section>
             <div class="container-fluid">
                 <div class="row">
-                  <div class="col-12 p-0">
-                    <div class="bg-hero">
-                      <div class="no-content"></div>
-                    </div> 
+                  <div class="col-12 p-0 m-0">
+                    <div class="bg-hero"></div> 
                   </div>
-                    <div class="col-12 bg-opacity-0">
-                      <div class="main-text">
-                        <h2 class="text-uppercase mt-5 fw-bold">Un espacio para todas las mamás</h2>
-                        <p class="lead m-3">La maternidad es única. Cada quién vive una historia diferente, pero entre todas nos podemos entender, enriquecer y apoyar porque este... es un camino para toda la vida.</p>
+                    <div class="col-12 bg-opacity-0 p-0">
+                      <div class="p-0">
+                      <h2 class="text-uppercase mt-5 p-0 fw-bold">Un espacio para todas las mamás</h2>
+                        <p class="lead mt-3">La maternidad es única. Cada quién vive una historia diferente, pero entre todas nos podemos entender, enriquecer y apoyar porque este... es un camino para toda la vida.</p>
                       </div>
                     </div> 
                 </div>
             </div>
         </section>    
-        <section class="clr-darkpurple">
+        <section class="clr-main">
             <div class="container">
                 <div class="row">
                     <div class="col-sm col-md-4">
