Desafio SASS 2 con SEO

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="¡Encuentra tu tribu! You Got This Mom es un proyecto para demostrar que, aunque la maternidad es única, todas estamos juntas en esto.">
+    <meta name="keywords" content="MOM, MAMÁ, BLOG, LILY, YOU GOT THIS MOM, TIENDA, MOTHERHOOD, YOU GOT THIS DAD, BEBÉS, BABY, HIJAS, HIJOS, MATERNIDAD">
     <title>Inicio - YGTM</title>
     <link rel="icon" type="image/x-icon" href="images/LogoYGTM.jpeg">
     <link rel="stylesheet" href="css/compilado.css"> 
@@ -53,17 +55,17 @@
                     <div class="col-sm col-md-4">
                         <h3 class="p-4">About Me</h3>
                         <a class href="pages/aboutMe.html"><img class="w-100 p-0 hover" src="images/aboutImg.jpeg" alt="Fotografía About Me"></a>
-                        <p class="ctaLinks__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi eaque consequuntur totam odit fugit, maiores cumque at voluptatum aliquam eveniet.</p>
+                        <p class="ctaLinks__text">Hola, soy Lily. Siempre me ha gustado escribir, pero nunca lo he hecho público hasta ahora. En el 2017, antes de convertirme en mamá, sentí la necesidad de encontrar mi tribu...Y aquí me puedes conocer.</p>
                     </div>
                     <div class="col-sm col-md-4">
                         <h3 class="p-4">Blog</h3>
                         <a href="pages/blog.html"><img class="w-100 p-0 hover" src="images/momTalesBlog.PNG" alt="Fotografía Blog"></a>
-                        <p class="ctaLinks__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi eaque consequuntur totam odit fugit, maiores cumque at voluptatum aliquam eveniet.</p>
+                        <p class="ctaLinks__text">Comencé a escribir tanto que decidí abrir mi blog, y con el tiempo se ha vuelto un espacio en el que otras como yo pueden dejar en palabras esas cosas que creemos vivimos solas.</p>
                     </div>
                     <div class="col-sm col-md-4">
                         <h3 class="p-4">Productos</h3>
                         <a href="pages/productos.html"> <img class="w-100 p-0 hover" src="images/productosTazaYouGotThisMom.png" alt="Fotografía Productos"></a>
-                        <p class="ctaLinks__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi eaque consequuntur totam odit fugit, maiores cumque at voluptatum aliquam eveniet.</p>
+                        <p class="ctaLinks__text">Desde que abrí la página, muchas me han preguntado por esto, y por fin lo logramos. ¡Tenemos productos! Entra para ver qué tenemos en el inventario, y qué cosas nuevas vamos a agregar.</p>
                     </div>
                 </div>
             </div>
